--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubDeviceView.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IoTHub/AzureIoTHubDeviceView.xaml
@@ -1,12 +1,35 @@
-﻿<UserControl x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IoTHub.AzureIoTHubDeviceView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IoTHub"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+<UserControl
+    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IoTHub.AzureIoTHubDeviceView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:atc="https://github.com/atc-net/atc-wpf/tree/main/schemas"
+    xmlns:atcValueConverters="https://github.com/atc-net/atc-wpf/tree/main/schemas/value-converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ioTHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IoTHub"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DataContext="{d:DesignInstance Type=ioTHub:AzureIoTHubDeviceViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <atcValueConverters:ObjectNotNullToVisibilityVisibleValueConverter x:Key="ObjectNotNullToVisibilityVisibleValueConverter" />
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
-            
+        <atc:UniformSpacingPanel
+            Orientation="Vertical"
+            Spacing="10"
+            Visibility="{Binding Path=IotDevice, Converter={StaticResource ObjectNotNullToVisibilityVisibleValueConverter}}">
+            <!--  ReSharper disable Xaml.PossibleNullReferenceException  -->
+            <!--  ReSharper disable GrammarMistakeInMarkupAttribute  -->
+            <atc:LabelTextInfo Text="{Binding Path=IotDevice.Id}" />
+            <!--  ReSharper restore GrammarMistakeInMarkupAttribute  -->
+            <!--  ReSharper restore Xaml.PossibleNullReferenceException  -->
+        </atc:UniformSpacingPanel>
+        <!--<atc:LabelTextInfo Text="No Data" />-->
     </Grid>
 </UserControl>
