--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IotHub/IotHubDeviceOverview.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IotHub/IotHubDeviceOverview.xaml
@@ -1,9 +1,9 @@
 <UserControl
-    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IotHub.IotHubDeviceOverviewView"
+    x:Class="Atc.Azure.IoT.Wpf.App.UserControls.IotHub.IotHubDeviceOverview"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:ioTHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IoTHub"
+    xmlns:ioTHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IotHub"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DataContext="{d:DesignInstance Type=ioTHub:IotHubServiceViewModel}"
     d:DesignHeight="450"
@@ -33,7 +33,7 @@
                     Header="Status" />
                 <GridViewColumn
                     Width="Auto"
-                    DisplayMemberBinding="{Binding Path=AuthenticationType}"
+                    DisplayMemberBinding="{Binding Path=AuthenticationMechanism.AuthenticationType}"
                     Header="Authentication Type" />
             </GridView>
         </ListView.View>
