--- a/src/Atc.Azure.IoT.Wpf.App/UserControls/IotHub/IotHubDeviceDetails.xaml
+++ b/src/Atc.Azure.IoT.Wpf.App/UserControls/IotHub/IotHubDeviceDetails.xaml
@@ -8,6 +8,7 @@
     xmlns:iotHub="clr-namespace:Atc.Azure.IoT.Wpf.App.UserControls.IotHub"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:textFormatters="clr-namespace:Atc.Wpf.Controls.Documents.TextFormatters;assembly=Atc.Wpf"
+    xmlns:valueConverters="clr-namespace:Atc.Azure.IoT.Wpf.App.ValueConverters"
     d:DataContext="{d:DesignInstance Type=iotHub:IotHubServiceViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -15,6 +16,7 @@
 
     <UserControl.Resources>
         <atcValueConverters:ObjectNullToVisibilityCollapsedValueConverter x:Key="ObjectNullToVisibilityCollapsedValueConverter" />
+        <valueConverters:SvgImageOperatingSystemValueConverter x:Key="SvgImageOperatingSystemValueConverter" />
     </UserControl.Resources>
 
     <!--  ReSharper disable Xaml.PossibleNullReferenceException  -->
@@ -22,53 +24,124 @@
         <TabControl
             Grid.Row="0"
             Grid.Column="0"
-            TabStripPlacement="Left">
+            TabStripPlacement="Top">
 
-            <TabItem Header="Device Status">
+            <TabItem Header="Device status">
                 <atc:UniformSpacingPanel
                     Margin="10"
                     Orientation="Vertical"
                     Spacing="10"
                     Visibility="{Binding Path=SelectedIotDevice, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}">
 
-                    <GroupBox Padding="10" Header="Status">
-                        <atc:GridEx Columns="Auto,*,Auto,50,Auto">
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="Bold"
+                        Text="Device status" />
 
-                            <!--  TODO: Col1: RestartModuleButton  -->
+                    <atc:GridEx Margin="10" Columns="Auto,*,Auto,50,Auto">
 
-                            <atc:UniformSpacingPanel
-                                Grid.Column="1"
-                                ItemVerticalAlignment="Center"
-                                Orientation="Horizontal"
-                                Spacing="10">
-                                <TextBlock
-                                    FontSize="16"
-                                    FontWeight="Bold"
-                                    Text="Device ID:" />
-                                <TextBlock FontSize="16" Text="{Binding Path=SelectedIotDevice.DeviceId, FallbackValue=NA}" />
-                            </atc:UniformSpacingPanel>
+                        <!--  TODO: Col1: RestartModuleButton  -->
 
-                            <StackPanel Grid.Column="2" Orientation="Horizontal">
-                                <!--  TODO: Icon  -->
-                                <StackPanel Orientation="Vertical">
-                                    <TextBlock FontWeight="Bold" Text="Runtime Status:" />
-                                    <TextBlock Text="{Binding Path=SelectedIotDeviceDetails.RuntimeStatusCode, FallbackValue=NA}" />
-                                </StackPanel>
+                        <atc:UniformSpacingPanel
+                            Grid.Column="1"
+                            ItemVerticalAlignment="Center"
+                            Orientation="Horizontal"
+                            Spacing="10">
+                            <TextBlock
+                                FontSize="16"
+                                FontWeight="Bold"
+                                Text="Device ID:" />
+                            <TextBlock FontSize="16" Text="{Binding Path=SelectedIotDevice.DeviceId, FallbackValue=NA}" />
+                        </atc:UniformSpacingPanel>
+
+                        <StackPanel Grid.Column="2" Orientation="Horizontal">
+                            <!--  TODO: Icon  -->
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock FontWeight="Bold" Text="Runtime Status:" />
+                                <TextBlock Text="{Binding Path=SelectedIotDeviceDetails.RuntimeStatusCode, FallbackValue=NA}" />
                             </StackPanel>
+                        </StackPanel>
 
-                            <StackPanel Grid.Column="4" Orientation="Horizontal">
-                                <!--  TODO: Icon  -->
-                                <StackPanel Orientation="Vertical">
-                                    <TextBlock FontWeight="Bold" Text="Platform:" />
-                                    <TextBlock>
-                                        <Run Text="{Binding Path=SelectedIotDeviceDetails.OperatingSystem, FallbackValue=NA}" />
-                                        <Run Text="{Binding Path=SelectedIotDeviceDetails.OperatingSystemArchitecture, FallbackValue=NA}" />
-                                    </TextBlock>
-                                </StackPanel>
+                        <atc:UniformSpacingPanel
+                            Grid.Column="4"
+                            Orientation="Horizontal"
+                            Spacing="8">
+                            <atc:SvgImage
+                                Width="32"
+                                Height="32"
+                                OverrideColor="{DynamicResource AtcApps.Colors.ThemeForeground}"
+                                Source="{Binding Path=SelectedIotDeviceDetails.OperatingSystem, Converter={StaticResource SvgImageOperatingSystemValueConverter}, FallbackValue='/Atc.Azure.IoT.Wpf.App;component/Resources/Images/32/linux.svg'}" />
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock FontWeight="Bold" Text="Platform:" />
+                                <TextBlock>
+                                    <Run Text="{Binding Path=SelectedIotDeviceDetails.OperatingSystem, FallbackValue=NA}" />
+                                    <Run Text="{Binding Path=SelectedIotDeviceDetails.OperatingSystemArchitecture, FallbackValue=NA}" />
+                                </TextBlock>
                             </StackPanel>
+                        </atc:UniformSpacingPanel>
 
-                        </atc:GridEx>
-                    </GroupBox>
+                    </atc:GridEx>
+
+                </atc:UniformSpacingPanel>
+            </TabItem>
+
+            <TabItem Header="Device identity">
+                <atc:UniformSpacingPanel
+                    Margin="10"
+                    Orientation="Vertical"
+                    Spacing="10"
+                    Visibility="{Binding Path=SelectedIotDevice, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}">
+
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="Bold"
+                        Text="Device identity" />
+
+                    <atc:LabelTextInfo
+                        HideAreas="InformationAndValidation"
+                        LabelText="DeviceId"
+                        Text="{Binding Path=SelectedIotDevice.DeviceId}" />
+
+
+                </atc:UniformSpacingPanel>
+            </TabItem>
+
+            <TabItem Header="Device twin">
+                <atc:UniformSpacingPanel
+                    Margin="10"
+                    Orientation="Vertical"
+                    Spacing="10"
+                    Visibility="{Binding Path=SelectedIotDevice, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}">
+
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="Bold"
+                        Text="Device twin" />
+
+                    <atc:RichTextBoxEx
+                        Background="{DynamicResource AtcApps.Brushes.ThemeBackground}"
+                        FontFamily="Courier New"
+                        Foreground="{DynamicResource AtcApps.Brushes.Text}"
+                        IsReadOnly="True"
+                        Text="{Binding Path=SelectedIotDevice.TwinJson}"
+                        TextFormatter="{x:Static textFormatters:JsonFormatter.Instance}"
+                        ThemeMode="Dark"
+                        Visibility="{Binding Path=SelectedIotDevice, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}" />
+
+                </atc:UniformSpacingPanel>
+            </TabItem>
+
+            <TabItem Header="Module identities">
+                <atc:UniformSpacingPanel
+                    Margin="10"
+                    Orientation="Vertical"
+                    Spacing="10"
+                    Visibility="{Binding Path=SelectedIotDeviceDetails, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}">
+
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="Bold"
+                        Text="Module identities" />
 
                     <GroupBox
                         Padding="10"
@@ -197,18 +270,6 @@
                     </GroupBox>
 
                 </atc:UniformSpacingPanel>
-            </TabItem>
-
-            <TabItem Header="Device Twin">
-                <atc:RichTextBoxEx
-                    Background="{DynamicResource AtcApps.Brushes.ThemeBackground}"
-                    FontFamily="Courier New"
-                    Foreground="{DynamicResource AtcApps.Brushes.Text}"
-                    IsReadOnly="True"
-                    Text="{Binding Path=SelectedIotDevice.RawJson}"
-                    TextFormatter="{x:Static textFormatters:JsonFormatter.Instance}"
-                    ThemeMode="Dark"
-                    Visibility="{Binding Path=SelectedIotDevice, Converter={StaticResource ObjectNullToVisibilityCollapsedValueConverter}}" />
             </TabItem>
 
         </TabControl>
